# bubble_tea

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
app/api/: apps.py  screens.py  serializers.py  urls.py  views.py
app/app/: settings.py
app/avito/: models.py
app/avito/management/commands/: avito_ads.json  generate_data.py
app/avito/migrations/: 0001_initial.py  0002_category_img_prev_url.py  0003_remove_productimage_image_productimage_image_url.py  0004_alter_productimage_image_url.py
bubble_tea/: apps.py  descriptors.py  urls.py  views.py
bubble_tea/app_views/: __init__.py  base.py  button.py  card.py  checkbox.py  collection.py  complex.py  constants.py  factory.py  image.py  list.py  screen.py  scroll.py  stack.py  switch.py  text.py  textfield.py  utils.py
bubble_tea/datasource/: __init__.py  datasource.py
