[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bubble-tea"
version = "0.1.0"
description = "Краткое описание библиотеки"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{ name = "Твое Имя", email = "you@example.com" }]
dependencies = [
    "django>=5.2"
]

[project.urls]
Homepage = "https://github.com/твоя-ссылка"

[tool.setuptools]
packages = ["bubble_tea"]

[tool.black]
line_length = 119

[tool.isort]
profile = "black"
line_length = 119